--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.2.32",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.6",
