--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@next/bundle-analyzer": "^14.2.4",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie": "^0.6.0",
+    "@types/mailcheck": "^1.1.1",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
