--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.12.0",
     "@next/bundle-analyzer": "^14.2.4",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie": "^0.6.0",
