--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-google-recaptcha-v3": "^1.10.1",
     "react-hot-toast": "^2.5.2",
     "react-phone-number-input": "^3.4.12",
+    "react-quill": "^2.0.0",
     "recharts": "^2.12.7",
     "sonner": "^2.0.7",
     "swr": "^2.3.4",
