--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ai-sdk/google": "0.0.21",
     "@floating-ui/react": "^0.27.15",
     "@google/generative-ai": "^0.24.1",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-hover-card": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
