--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-hover-card": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@radix-ui/react-visually-hidden": "^1.2.3",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
+    "@types/recharts": "^1.8.29",
     "ai": "3.2.17",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
@@ -52,7 +54,7 @@
     "react-hot-toast": "^2.5.2",
     "react-phone-number-input": "^3.4.12",
     "react-quill": "^2.0.0",
-    "recharts": "^2.12.7",
+    "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.1",
